// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
<CartCountStyles__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCountStyles__Dot>
        10
      </CartCountStyles__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCountStyles__AnimationStyles>
`;

exports[`<CartCount/> updates via props 1`] = `
<CartCountStyles__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="50"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCountStyles__Dot>
        50
      </CartCountStyles__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCountStyles__AnimationStyles>
`;

exports[`<CartCount/> updates via props 2`] = `
<CartCountStyles__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartCountStyles__Dot>
        10
      </CartCountStyles__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCountStyles__AnimationStyles>
`;
